tui/src/snapshots/codex_tui__resume_picker_prompt__tests__resume_picker_overlay_renders_details_pager.snap
---
source: tui/src/resume_picker_prompt.rs
expression: terminal.backend()
---
"                                                                                "
"┃ ✓ 4 rounds · 1 minute ago     main  .codexpotter/projects/2026/04/16/1/       "
"┃   Details pager state         MAIN.md                                         "
"                                                                                "
"                                Task line                                       "
"                                ROUND 1 @ 1 minute ago                          "
"                                                                                "
"                                Done                                            "
"                                                                                "
"                                ROUND 2 @ 1 minute ago                          "
"                                                                                "
"  Enter resume  Esc start new  Tab maximize  ↑↓ switch                     ▪▫▫  "
